syntax = "proto3";

package services;
option go_package = "./;api";

import "google/api/annotations.proto";
import "uuid.proto";

service OrderClient {
  rpc IssuingAnOrderCustomer (IssuingAnOrderCustomerRequest) returns (IssuingAnOrderCustomerResponse) {
    option (google.api.http) = {
      patch: "/order_api/order"
      body: "order_ids"
    };
  }
  rpc ReturnOrder(ReturnOrderRequest) returns (ReturnOrderResponse){
    option (google.api.http) = {
      patch: "/order_api/order/{order_id.value}/customer/{customer_id.value}"
    };
  }
}

message IssuingAnOrderCustomerRequest{
  repeated models.UUID order_ids = 1;
}

message IssuingAnOrderCustomerResponse{
}

message ReturnOrderRequest{
  models.UUID order_id = 1;
  models.UUID customer_id = 2;
}

message ReturnOrderResponse{
}