syntax = "proto3";

package services;
option go_package = "./;api";

import "google/api/annotations.proto";
import "order.proto";
import "uuid.proto";
service OrderDelivery {
  rpc GetReturnedOrders (GetReturnedOrdersRequest) returns (GetReturnedOrdersResponse) {
    option (google.api.http) = {
      get: "/order_api/order"
    };
  }
  rpc SearchOrders(SearchOrdersRequest) returns (SearchOrdersResponse){
    option (google.api.http) = {
      get: "/order_api/customer/{customer_id.value}"
    };
  }
}

message GetReturnedOrdersRequest{
  uint32 page = 2;
  uint32 limit = 3;
}

message GetReturnedOrdersResponse{
  repeated models.Order orders = 1;
}

message SearchOrdersRequest{
  models.UUID customer_id = 1;
  uint32 last_n = 2;
  models.UUID pickpoint_id = 3;
}

message SearchOrdersResponse{
  repeated models.Order orders = 1;
}